# wehire-monitor

./: .gitignore  README.md  pyproject.toml
.trae/documents/: v0.4-qr-login-plan.md
config/: .env.example  accounts.yaml.example  keywords.yaml.example  rules.yaml.example
docs/: WeHireMonitor-软件需求规格.md  个人 AI 招聘情报监控平台 PRD.md
docs/plans/: 2026-06-28-v0.1-mvp.md  2026-06-28-v0.2-mvp.md  2026-06-29-v0.3-mvp.md  2026-06-30-v0.3-multimodal-unification.md
src/wehire_monitor/: __init__.py  main.py
src/wehire_monitor/config/: loader.py  schemas.py
src/wehire_monitor/domain/: models.py  status.py
src/wehire_monitor/infra/: rate_limiter.py
src/wehire_monitor/modules/extractor/: budget.py  extractor.py  (+5 more)
src/wehire_monitor/pipeline/: runner.py  scheduler.py
src/wehire_monitor/providers/: factory.py
tests/: conftest.py
tests/integration/: test_dry_run.py  test_v02_pipeline.py  test_v03_pipeline.py  test_v04_login.py
tests/unit/: test_budget.py  test_config.py  test_extractor.py  test_extractor_v03.py  test_fetcher.py  test_llm_deepseek.py  test_matcher.py  test_models.py  test_multimodal_factory.py  test_notifier.py  test_notifier_v02.py  test_ocr_quality.py  test_ocr_rapid.py  test_parser.py  test_pipeline.py  test_pipeline_v02.py  test_postprocess.py  test_prefilter.py  test_provider_factory.py  test_rate_limiter.py  test_repository.py  test_repository_jobs.py  test_review_cli.py  test_slicer.py  test_status.py  test_stitcher.py  test_v02_models.py  test_v03_models.py  test_vlm_factory.py  test_vlm_merge.py  test_vlm_provider.py  test_wechat_login.py
(+25 files in other folders)
