[project]
name = "wehire-monitor"
version = "0.3.0"
description = "微信公众号招聘情报监控管道 | WeChat official account recruitment intelligence monitor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "Pillow>=10",
    "imagehash>=4",
    "pydantic>=2",
    "apscheduler>=3.10",
    "pyyaml>=6",
    "python-dotenv>=1",
    "typer>=0.12",
    "loguru>=0.7",
    "rapidocr-onnxruntime>=1.3",
]

[project.scripts]
wehire-monitor = "wehire_monitor.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wehire_monitor"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
